tests/snapshots/snapshot_integration__tikz__class_method_and_main.snap
---
source: tests/snapshot_integration.rs
expression: output
---

\documentclass[tikz,border=10pt]{standalone}
\usepackage{ctex}
\usetikzlibrary{graphdrawing}
\usetikzlibrary{shapes}
\usepackage{spverbatim}
\usepackage{varwidth}
\usetikzlibrary{graphs}
\usegdlibrary{layered}
\usepackage[T1]{fontenc}% NOT OT1!
\usepackage{lmodern}% Latin Modern fonts,
  % a modern variant of Computer Modern fonts
\let\ttdefault\rmdefault
\tikzstyle{block} = [%
   draw,thick,fill=blue!0,
   inner sep=0.3cm,
   text centered, minimum height=1em,
   execute at begin node={\begin{varwidth}{8em}},
   execute at end node={\end{varwidth}}]
\begin{document}
\tikz [layered layout, sibling distance=3cm] {
  \node[draw] (D0) [rounded rectangle, block] { Begin };
\node[draw] (D1) [rounded rectangle, block] { End };
\node[draw] (D4) [rectangle, block] { \spverb$Runner r;$ }; \node[draw] (D6) [rectangle, block] { \spverb$int y = r.run();$ }; \node[draw] (D8) [diamond, aspect=2, block] { \spverb$(y > 2)$ }; \node[draw] (D13) [rectangle, block] { \spverb$y++;$ }; \node[draw] (D15) [rectangle, block] { \spverb$return y;$ }; \draw (D4) edge[->] (D6);
\draw (D6) edge[->] (D8);
\draw (D8) edge[->, below] node { 15 } (DN);
\draw (D13) edge[->] (D15);
\draw (D8) edge[->, below] node { 13 } (DY);
\draw (D15) edge[->] (D1);
\draw (D0) edge[->] (D4);

}
\end{document}
