tests/snapshots/snapshot_integration__tikz__linear_return.snap
---
source: tests/snapshot_integration.rs
expression: output
---

\documentclass[tikz,border=10pt]{standalone}
\usepackage{ctex}
\usetikzlibrary{graphdrawing}
\usetikzlibrary{shapes}
\usepackage{spverbatim}
\usepackage{varwidth}
\usetikzlibrary{graphs}
\usegdlibrary{layered}
\usepackage[T1]{fontenc}% NOT OT1!
\usepackage{lmodern}% Latin Modern fonts,
  % a modern variant of Computer Modern fonts
\let\ttdefault\rmdefault
\tikzstyle{block} = [%
   draw,thick,fill=blue!0,
   inner sep=0.3cm,
   text centered, minimum height=1em,
   execute at begin node={\begin{varwidth}{8em}},
   execute at end node={\end{varwidth}}]
\begin{document}
\tikz [layered layout, sibling distance=3cm] {
  \node[draw] (D0) [rounded rectangle, block] { Begin };
\node[draw] (D1) [rounded rectangle, block] { End };
\node[draw] (D4) [rectangle, block] { \spverb$int a = 1;$ }; \node[draw] (D6) [rectangle, block] { \spverb$a += 2;$ }; \node[draw] (D8) [rectangle, block] { \spverb$return a;$ }; \draw (D4) edge[->] (D6);
\draw (D6) edge[->] (D8);
\draw (D8) edge[->] (D1);
\draw (D0) edge[->] (D4);

}
\end{document}
